--- a/client/src/containers/app/App.css
+++ b/client/src/containers/app/App.css
@@ -1,4 +1,4 @@
 .child-page{
-  width: 1200px;
+  width: 1030px;
   margin: 0 auto;
 }
