--- a/client/src/containers/home/Home.css
+++ b/client/src/containers/home/Home.css
@@ -16,17 +16,16 @@
 .apply-paper{
   width: 300px;
   margin: 20px;
-  text-align: center;
   color:#000;
   display: inline-block;
 }
 .apply-paper .paper-container{
-  padding: 27px;
+  padding: 0 27px 27px 27px;
 }
 .apply-paper .paper-bar{
   width:100%;
   height:1px;
-  background-color:#dedede;
+  border: 1px solid #e6e6e6;
 }
 
 .text-left{
